code analysis updates